--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ button{
     color: white;
     background: #333;
     outline: none;
-    padding: 0.5rem 1.8rem;
+    padding: 0.5rem 0.8rem;
     box-shadow: 0 0.3rem rgba(121, 121, 121, 0.65);
 }
 button:hover{
@@ -76,6 +76,9 @@ button:active{
 }
 .fa-twitter{
     font-size: 1.5rem;
+}
+.speaker-button:hover{
+    color: #38a1f3;
 }
 /* loader */
 .loader {
